--- a/.github/workflows/send-slack-msg-on-manifest-change.yml
+++ b/.github/workflows/send-slack-msg-on-manifest-change.yml
@@ -4,9 +4,12 @@ on:
     branches:
       - master
       - development
-uses: slackapi/slack-github-action@v1.21.0
-with:
-  channel-id: C03NC5UBXKK
-  slack-message: "Checking wheather it works or not"
-env:
-  SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+
+jobs:
+  send-slack-notification:
+    uses: slackapi/slack-github-action@v1.21.0
+    with:
+      channel-id: C03NC5UBXKK
+      slack-message: "Checking wheather it works or not"
+    env:
+      SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
