--- a/.github/workflows/send-slack-msg-on-manifest-change.yml
+++ b/.github/workflows/send-slack-msg-on-manifest-change.yml
@@ -14,6 +14,6 @@ jobs:
         uses: slackapi/slack-github-action@v1.21.0
         with:
           channel-id: C03NC5UBXKK
-          slack-message: "Checking wheather it works or not"
+          slack-message: "Getting the branch in which this happened ${{ github.ref_name }}"
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
