--- a/.github/workflows/send-slack-msg-on-manifest-change.yml
+++ b/.github/workflows/send-slack-msg-on-manifest-change.yml
@@ -14,8 +14,9 @@ jobs:
         uses: slackapi/slack-github-action@v1.21.0
         with:
           channel-id: C03NC5UBXKK
-          payload: |
+          payload: 
             {
+
 	            "blocks": [
 		          {
 			          "type": "header",
@@ -43,7 +44,7 @@ jobs:
 			          }
 		          }
 	        ]
-          }
-
+            }
+          
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
