--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "spack",
+    "build": "ncc build src/index.ts -o dist",
     "dev:swc": "swc ./src -d dev -w",
     "dev:app": "nodemon dev/index.js",
     "dev": "concurrently \"pnpm run dev:swc\" \"pnpm run dev:app\""
@@ -24,12 +24,14 @@
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.224",
     "@types/node": "^18.7.1",
+    "@vercel/ncc": "^0.34.0",
     "chokidar": "^3.5.3",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
     "@actions/core": "^1.9.1",
     "@actions/github": "^5.0.3",
-    "concurrently": "^7.3.0"
+    "concurrently": "^7.3.0",
+    "typescript": "^4.7.4"
   }
 }
