--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
         uses: ./
         id: test
         with:
-          github-token: "github-token"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
